# EPITECH-OOP-IndieStudio

./: CMakeLists.txt  readme.md
Assets/: 3.iqm  5.iqm  bomb.iqm  bomb_up.iqm  cool_grass.iqm  fire_up.iqm  ground.iqm  invincible.iqm  map.txt  perso_tout_en_un.iqm  speed_up.iqm  wall_pass.iqm
AssetsManager/: AssetsLoader.cpp  AssetsLoader.hpp
Core/: Core.cpp  Core.hpp  main.cpp
Core/IA/: ia.cpp  ia.hpp
Core/Map/: map.cpp  map.hpp
Core/Menu/: Menu.cpp  Menu.hpp
ECS/: AIComponent.hpp  Animation.hpp  ColliderComponent.hpp  Components.hpp  KeyboardControler.hpp  MapComponent.hpp  MapController.hpp  ModelComponent.hpp  SettingsPlayer.hpp  TransformComponent.hpp
Encapsulation/: iGraphicLib.hpp
EntityComponentSystem/: Component.hpp  ECS.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  KeyboardControlerComponent.hpp  ModelComponent.hpp  TransformComponent.hpp  Vector3D.cpp  Vector3D.hpp
GameEngine/: Engine.cpp  Engine.hpp  Settings.hpp
Save/: save.txt
doc/: doc.md
